[package]
name = "openai-api"
version = "0.1.5-alpha.0"
authors = ["Josh Kuhn <deontologician@gmail.com>"]
license-file = "LICENSE"
edition = "2018"
description = "OpenAI API library for rust"
homepage = "https://github.com/deontologician/openai-api-rust/"
repository = "https://github.com/deontologician/openai-api-rust/"
keywords = ["openai", "gpt3"]
categories = ["api-bindings", "asynchronous"]

[build]
rustdocflags = ["--all-features"]

[features]
default = ["sync", "async"]
sync = ["ureq"]
async = ["surf/hyper-client"]

[dependencies]

[dev-dependencies]
mockito = "0.28.0"
maplit = "1.0.2"
tokio = { version = "^0.2.5", features = ["full"]}
env_logger = "0.8.2"
serde_json = "^1.0"
